# sports_association

./: CMakeLists.txt  README.md  csapatok.h  main.cpp  memtrace.h  sportegyesulet.cpp  sportegyesulet.h  stringek.cpp  stringek.h  tesztek.cpp
tmp/: adatbazis.txt  csapatok.h  main.cpp  memtrace.cpp  sportegyesulet.cpp  sportegyesulet.h  stringek.cpp  stringek.h  tesztek.cpp  tesztek.h
